# shindig-template

./: .env.default  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  Procfile.preprocess  Procfile.static  README-pollen.md  README.md  app.js  config.rkt  db.sqlite3  devcontainer.json  free-response-submissions.sqlite  highlight-design.tldr  honeycomb.pem  index.html  index.poly.pm  newapp.js  package.json  pagetree-demo.ptree  pnpm-lock.yaml  pollen.rkt  postcss.config.js  proxy-server.js  pyproject.toml  questions.sqlite  roadmap.md  sentence-matching.py  tailwind.config.js  template.html  template.html.p  watch_rkt_files.sh
.devcontainer/: devcontainer.json
.husky/: pre-commit
backend/: .env.default  .gitignore  Procfile  README-pollen.md  README.md  app.js  config.rkt  dynamic.rkt  info.rkt  package-lock.json  package.json  pnpm-lock.yaml  pollen.rkt  tailwind.config.js
common/: config.rkt
config/: asgi.py  settings.py  urls.py  wsgi.py
content/: README.md  base.html.p  config.rkt  demo.poly.pm  handouts.tex.pp  index.html.pm  index.poly.pm  index.ptree  page4.poly.pm  pdf.ptree  pollen.rkt  shindig_book.cls  table-of-contents.tex.pp  template.html.p  template.pdf.p  template.tex.p  tex.ptree  title.tex.p  title.tex.pp  wholebook.ptree  wholebook.tex.pp  wholebook.toc
css/: output.css
examples/: dynamic-binding-and-parameterization.rkt
honeycomb/: apps.py  config.rkt  dynamic.rkt  info.rkt  urls.py  views.py
honeycomb-tests/: info.rkt
latex/: main.tex  shindig_book.cls
pollen-src/: components.rkt  decode.rkt  (+7 more)
(+184 files in other folders)
